--- a/group_project.html
+++ b/group_project.html
@@ -4,4 +4,9 @@
     <title>CONSERFASHUN</title>
   </head>
 
-  
+  <body>
+    <header role="banner" class="header">
+      <h1> CONSERFASHUN </h1>
+
+
+  </body>
