--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
   <body>
     <header role="banner" class="header">
-      <h1> CONSERFASHUN </h1>
+      <h1> ARTWORKS </h1>
 
-Test commit by Jasmine
+Test commit by Tash
+
 
   </body>
