--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html>
   <head>
     <title>CONSERFASHUN</title>
+
+    <!-- ADDED BOOTSTRAP LINK-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
 
   <body>
-    <header role="banner" class="header">
-      <h1> ARTWORKS </h1>
+    <header id="header" class="header clearfix">
+
+    <li>
+      <a href="/artworks">ARTWORKS</a>
+    </li>
+
+    <li>
+      <a href="/artists">ARTISTS</a>
+    </li>
+
+
+
 
 Test commit by Tash
 
