--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
   </head>
 
   <body>
-    <header id="header" class="header clearfix">
 
-    <li>
-      <a href="/artworks">ARTWORKS</a>
-    </li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"> CONSERFASHUN<span class="sr-only">(current)</span></a>
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a href="/Users/carwyn/Documents/CODING_COURSE/group_project/artworks.html">ARTWORKS</a>
+          </li>
 
-    <li>
-      <a href="/artists">ARTISTS</a>
-    </li>
+          <li>
+            <a href="/Users/carwyn/Documents/CODING_COURSE/group_project/artists.html">ARTISTS</a>
+          </li>
 
-
+          <li>
+            <a href="/contact">CONTACT</a>
+          </li>
+        </ul>
+      </nav>
 
 
 Test commit by Tash
