--- a/index.html
+++ b/index.html
@@ -3,30 +3,36 @@
   <head>
     <title>CONSERFASHUN</title>
 
-    <!-- ADDED BOOTSTRAP LINK-->
+    <!-- ADD BOOTSTRAP CORE HERE!!!! -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
 
   <body>
+    <!-- Header Navigation -->
+    <nav class="navbar fixed-top navbar-light bg-light" id="mainNav">
+      <div class="container">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"> CONSERFASHUN<span class="sr-only">(current)</span></a>
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a href="/Users/carwyn/Documents/CODING_COURSE/group_project/artworks4.html">ARTWORKS</a>
+      <a class="navbar-brand js scroll trigger" href="index.html">CONSERFASHUN</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#artwork4">ARTWORKS</a>
           </li>
-
-          <li>
-            <a href="/Users/carwyn/Documents/CODING_COURSE/group_project/artists.html">ARTISTS</a>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#artists">ARTISTS</a>
           </li>
-
-          <li>
-            <a href="/contact">CONTACT</a>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a>
           </li>
         </ul>
-      </nav>
+      </div>
+    </nav>
 
 
 Test commit by Tash
