--- a/crabdraws.html
+++ b/crabdraws.html
@@ -33,3 +33,37 @@ Orangutans
 
 <img src="https://scontent-lht6-1.cdninstagram.com/vp/b837fa94cb368298bb69e0bcd4ab00dc/5D3F10FC/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54447067_355154648436944_7000422641458013400_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" style="object-fit: cover;">
 <!-- Include some other art which is all red (I have lots of pictures on - maybe the "wannabe degas series") -->
+
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-2"></div>
+    <div class="col-8">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="file:///Users/harrietMac/Desktop/IMG-2677.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="file:///Users/harrietMac/Desktop/Art%20pics/Drawing%20Year%20Application/RedRoom_14x9.5GouacheOnPaper.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+  <div class="col-2"></div>
