more images added

--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -22,3 +22,5 @@
 </html>
 
 As an intensely cultural crab, I thought I'd impart some of my wisdom on books, .
+
+<img src="https://scontent-lht6-1.cdninstagram.com/vp/9a408c96f8c3fedc909a57273a18617e/5D497BF0/t51.2885-15/e35/13652074_1052794514811194_1630301489_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid" alt="Responsive image">
