--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#artwork4">ARTWORKS</a>
+            <a class="nav-link js-scroll-trigger" href="#crabrecommends">REVIEWS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#artists">ARTISTS</a>
+            <a class="nav-link js-scroll-trigger" href="#crabdraws">DRAWING</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a>
+              <a class="nav-link js-scroll-trigger" href="#crashion">CRASHION</a>
           </li>
         </ul>
       </div>
@@ -45,13 +45,27 @@
       sqs-gallery-container
       sqs-gallery-block-grid
       sqs-gallery-aspect-ratio-square
-      sqs-gallery-thumbnails-per-row-6
+      sqs-gallery-thumbnails-per-row-6">
 
       <footer class="Footer" role="contentinfo" data-controller="FooterBreakpoints" data-controllers-bound="FooterBreakpoints">
 
         <div class="Footer-inner clear">
     <!-- Insert picture of crab -->
-    <img src="https://scontent-lht6-1.cdninstagram.com/vp/9a408c96f8c3fedc909a57273a18617e/5D497BF0/t51.2885-15/e35/13652074_1052794514811194_1630301489_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid" alt="Responsive image">
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://scontent-lht6-1.cdninstagram.com/vp/9a408c96f8c3fedc909a57273a18617e/5D497BF0/t51.2885-15/e35/13652074_1052794514811194_1630301489_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid d-block w-100" alt="crab in natural habitat">
+        </div>
+        <div class="carousel-item">
+          <img src="https://scontent-lht6-1.cdninstagram.com/vp/1e56d232ddc7d6a9ddeca8cc86a08b8a/5D4C571A/t51.2885-15/sh0.08/e35/s640x640/13774654_163560184064048_1402536340_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid d-block w-100" alt="crab and rock">
+        </div>
+        <div class="carousel-item">
+          <img src="https://scontent-lht6-1.cdninstagram.com/vp/c2855daef8ff3ad00efc5bdc75bea1f6/5D2FED29/t51.2885-15/sh0.08/e35/s640x640/16465797_758760790957289_2215885606393741312_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid d-block w-100" alt="anothercrab">
+        </div>
+      </div>
+    </div>
+
 
     <br>
     Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Sea-world to provide life hacks to all you lovely lucky people. Positively influencing since '97, this this website is a platform where I can share my recommendations drawn from my very busy and important life.
