--- a/crabdraws.html
+++ b/crabdraws.html
@@ -11,6 +11,13 @@
     <!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
+    <link href='https://fonts.googleapis.com/css?family=Archivo Black' rel='stylesheet'>
+    <style>
+      h3 {
+        font-family: 'Archivo Black';font-size: 100px;
+      }
+    </style>
+
     <title>crabdraws</title>
   </head>
 
@@ -19,67 +26,50 @@
     <div class="container">
       <div id="demobox2"></div>
 
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/b27f917452caf915935fc380c5b4760a/5D4E6FBA/t51.2885-15/sh0.08/e35/s640x640/13712102_938656649593666_1622482452_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid" alt="Responsive image">
+      <img src="https://scontent-lht6-1.cdninstagram.com/vp/b27f917452caf915935fc380c5b4760a/5D4E6FBA/t51.2885-15/sh0.08/e35/s640x640/13712102_938656649593666_1622482452_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid" alt="Responsive image" align="left">
       <div class="text-block">
-          <h4>I Draw Too</h4>
+          <h3>I DRAW TOO</h3>
       </div>
+    </div>
+
+    <div>
+      <div id="demobox3"></div>
+      <p>As I an immensely caring, talented, (and modest) crab, I am most alturistic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
+        (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
     </div>
 
     <br>
 
-    <p>As I an immensely caring, talented, (and modest) crab, I am most alturistic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.</p>
-    <p>(Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)</p>
-    <p>Fancy buying a picture and doing some of your own do-gooding?</p>
+    <h4>Fancy buying a picture and doing some of your own do-gooding?</h4>
 
-    <button type="button" class="btn btn-outline-secondary">Get in touch!</button>
-    Orangutans
-    <img src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
+    <button type="button" class="btn btn-outline-danger">Get in touch!</button>
 
-    <img src="https://scontent-lht6-1.cdninstagram.com/vp/b837fa94cb368298bb69e0bcd4ab00dc/5D3F10FC/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54447067_355154648436944_7000422641458013400_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" style="object-fit: cover;">
+    <br>
 
-    <!-- Include some other art which is all red (I have lots of pictures on - maybe the "wannabe degas series") -->
+    <div class="contrast">
+      <!-- Include some other art which is all red (I have lots of pictures on - maybe the "wannabe degas series") -->
+      <div id="carouselArtwork" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://scontent-lht6-1.cdninstagram.com/vp/b837fa94cb368298bb69e0bcd4ab00dc/5D3F10FC/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54447067_355154648436944_7000422641458013400_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="https://scontent-lht6-1.cdninstagram.com/vp/cb8e3efa0fc3b7acabb92bd705f80feb/5D40C6FF/t51.2885-15/e35/21147199_491766191182799_8403203402678403072_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" alt="Third slide">
+          </div>
+        </div>
+      </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
+      <br>
+      
     </div>
-    <div class="col-sm">
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/b837fa94cb368298bb69e0bcd4ab00dc/5D3F10FC/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54447067_355154648436944_7000422641458013400_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com"
-    </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
-    </div>
-    <div class="col-sm">
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/b837fa94cb368298bb69e0bcd4ab00dc/5D3F10FC/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54447067_355154648436944_7000422641458013400_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com"
-    </div>
-  </div>
-</div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
-    </div>
-    <div class="col-sm">
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/b837fa94cb368298bb69e0bcd4ab00dc/5D3F10FC/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54447067_355154648436944_7000422641458013400_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com"
-    </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
-    </div>
-    <div class="col-sm">
-      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/FullSizeRender%202%20copy%202.jpg">
-    </div>
-  </div>
-  <div class="col-2"></div>
+
+
+    <p>Orangutans</p>
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
