adding more pictures to various pages and tweaking index caraousel

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -20,12 +20,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
-<img src="https://scontent-lht6-1.cdninstagram.com/vp/b27f917452caf915935fc380c5b4760a/5D4E6FBA/t51.2885-15/sh0.08/e35/s640x640/13712102_938656649593666_1622482452_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid" alt="Responsive image">
+<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/artycrabcrop.jpg" class="img-fluid" alt="Responsive image">
 <br>
 As I an immensely caring, talented, (and modest) crab, I am most alturistic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
 <br>
 (Although, that being said, a crab of my calibre is very rare to find, one might say I am the most endangered on the list...)
 <br>
+<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/crabdrawingcrab.jpg">
 Fancy buying a picture and doing some of your own do-gooding?
 <button type="button" class="btn btn-outline-secondary">Get in touch!</button>
 Orangutans
@@ -46,31 +47,10 @@ Orangutans
 <div class="container">
   <div class="row">
     <div class="col-sm">
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
+      <img src="">
     </div>
     <div class="col-sm">
       <img src="https://scontent-lht6-1.cdninstagram.com/vp/b837fa94cb368298bb69e0bcd4ab00dc/5D3F10FC/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54447067_355154648436944_7000422641458013400_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com"
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
-    </div>
-    <div class="col-sm">
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/b837fa94cb368298bb69e0bcd4ab00dc/5D3F10FC/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54447067_355154648436944_7000422641458013400_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com"
-    </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <img src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
-    </div>
-    <div class="col-sm">
-      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/FullSizeRender%202%20copy%202.jpg">
     </div>
   </div>
 </div>
