--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -21,6 +21,6 @@
   </body>
 </html>
 
-As an intensely cultural crab, I thought I'd impart some of my wisdom on books, .
+As an intensely cultural crab, I thought I'd impart some of my wisdom to you through a few reviews.
 
-<img src="https://scontent-lht6-1.cdninstagram.com/vp/9a408c96f8c3fedc909a57273a18617e/5D497BF0/t51.2885-15/e35/13652074_1052794514811194_1630301489_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid" alt="Responsive image">
+<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/pensivereviewcrab.jpg">
