--- a/crashion.html
+++ b/crashion.html
@@ -17,22 +17,15 @@
 </html>
 <img src="file:///Users/Jasmine/Documents/Coding_Course/Screen%20Shot%202019-04-02%20at%2020.06.03.png" style="width:600px;height:600px;">
 <br>
-<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/fashionphotos.jpg">
 By now you'll have seen I'm a true trendsetter. All of my crab friends look to <i>me</i> to see what's en vogue.
 <br>
 This season? It's rouge darling.
 <br>
 I always have my bright red Aspinal bag with me - and I think you should get one too. Or throw a scarf around your neck for some real chic.
-<br>
-<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/aspinalcrab.jpg" style="width:600px;height:600px;">
+<img src="file:///Users/Jasmine/Documents/Coding_Course/Screen%20Shot%202019-04-02%20at%2019.15.32.png" style="width:600px;height:600px;">
 
 <img src="file:///Users/Jasmine/Documents/Coding_Course/Screen%20Shot%202019-04-02%20at%2020.11.53.png" style="width:600px;height:600px;">
-<br>
-<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/mycalveinscrab.jpg">
-Just chilling in #mycalveins
-<br>
-<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/filacrab%202.jpg">
-Fila is your queue if you want to get Wavy.
-<br>
+
+  </div>
   <div class="col-2"></div>
 </body>
