--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script type="text/javascript">
+    window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'OJdmiQCo9vY6u1yHlcl9'});Pixlee.addSimpleWidget({widgetId:'17151'});};</script>
+    <script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
   </head>
 
   <body>
@@ -52,31 +55,34 @@
         <div class="Footer-inner clear">
     <!-- Insert picture of crab -->
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <div id="indexcarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://scontent-lht6-1.cdninstagram.com/vp/9a408c96f8c3fedc909a57273a18617e/5D497BF0/t51.2885-15/e35/13652074_1052794514811194_1630301489_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid d-block w-100" alt="crab in natural habitat">
+            <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/naturalhabitat%202.jpg" class="img-fluid d-block w-100" alt="crab in natural habitat">
         </div>
         <div class="carousel-item">
-          <img src="https://scontent-lht6-1.cdninstagram.com/vp/1e56d232ddc7d6a9ddeca8cc86a08b8a/5D4C571A/t51.2885-15/sh0.08/e35/s640x640/13774654_163560184064048_1402536340_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid d-block w-100" alt="crab and rock">
+          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/angelcrab%20copy.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
         </div>
         <div class="carousel-item">
-          <img src="https://scontent-lht6-1.cdninstagram.com/vp/c2855daef8ff3ad00efc5bdc75bea1f6/5D2FED29/t51.2885-15/sh0.08/e35/s640x640/16465797_758760790957289_2215885606393741312_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" class="img-fluid d-block w-100" alt="anothercrab">
+          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/hidenseekcrab.jpg" class="img-fluid d-block w-100" alt="hide and seek crab">
+        </div>
+        <div class="carousel-item">
+          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/latitude.jpg" class="img-fluid d-block w-100" alt="crab flies">
         </div>
       </div>
     </div>
 
-
     <br>
     Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Sea-world to provide life hacks to all you lovely lucky people. Positively influencing since '97, this this website is a platform where I can share my recommendations drawn from my very busy and important life.
+    <br>
+    I woke up like this
+    <img src=file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg>
 
     <!-- Include a link to social media/ instagram pics -->
 
-    <a href="https://www.instagram.com/just_crab_/?hl=en" target="_blank" class="image-slide-anchor content-fill" style="overflow: hidden;">
-                  <noscript><img src="https://www.instagram.com/p/Bt3veslhJC-/" data-image-dimensions="640x800" data-image-focal-point="0.5,0.5" data-load="false" data-image-id="5ca29aa864549a9025031a6a" data-type="image" data-position-mode="standard" style="left: 0px; top: -15.625px; width: 125px; height: 156.25px; position: relative;" data-parent-ratio="1.0" alt="☀️" src="https://static1.squarespace.com/static/59f6f539b7411c736b459454/5a0446520100272b73db1cca/5ca29aa864549a9025031a6a/1554160300901/?format=300w" data-image-resolution="300w">
-                </a>
+    <div id="pixlee_container">
+    </div>
 
-Test commit by Tash
 
 
   </body>
