--- a/crabdraws.html
+++ b/crabdraws.html
@@ -39,11 +39,11 @@
     </div>
 
     <br>
-
+    <div>
     <h4>Fancy buying a picture and doing some of your own do-gooding?</h4>
 
     <button type="button" class="btn btn-outline-danger">Get in touch!</button>
-
+    </div>
     <br>
 
     <div class="contrast">
@@ -61,14 +61,9 @@
           </div>
         </div>
       </div>
-
       <br>
-      
+          <p>Orangutans</p>
     </div>
-
-
-
-    <p>Orangutans</p>
 
 
   <!-- Optional JavaScript -->
