trying to sort out wonky pics in crab wears, sorting instagram feed integration

--- a/crabwears.html
+++ b/crabwears.html
@@ -24,7 +24,7 @@ This season? It's rouge darling.
 <br>
 I always have my bright red Aspinal bag with me - and I think you should get one too. Or throw a scarf around your neck for some real chic.
 <br>
-<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/aspinalcrab.jpg" style="width:600px;height:600px;">
+<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/aspinalcrab.jpg">
 
 <img src="file:///Users/Jasmine/Documents/Coding_Course/Screen%20Shot%202019-04-02%20at%2020.11.53.png" style="width:600px;height:600px;">
 <br>
