--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JUST CRAB</title>
+    <title>CRAB</title>
 
     <!-- ADD BOOTSTRAP CORE HERE!!!! -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script type="text/javascript">
-    window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'OJdmiQCo9vY6u1yHlcl9'});Pixlee.addSimpleWidget({widgetId:'17151'});};</script>
-    <script src="//instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
+
   </head>
 
   <body>
@@ -18,20 +16,20 @@
     <nav class="navbar fixed-top navbar-light bg-light" id="mainNav">
       <div class="container">
 
-      <a class="navbar-brand js scroll trigger" href="index.html">JUST CRAB</a>
+      <a class="navbar-brand js scroll trigger" href="index.html">CRAB</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#crabrecommends">REVIEWS</a>
+            <a class="nav-link js-scroll-trigger" href="#crabrecommends">RECOMMENDS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#crabdraws">DRAWING</a>
+            <a class="nav-link js-scroll-trigger" href="#crabdraws">DRAWS</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#crashion">CRASHION</a>
+              <a class="nav-link js-scroll-trigger" href="#crashion">WEARS</a>
           </li>
         </ul>
       </div>
@@ -53,7 +51,6 @@
       <footer class="Footer" role="contentinfo" data-controller="FooterBreakpoints" data-controllers-bound="FooterBreakpoints">
 
         <div class="Footer-inner clear">
-    <!-- Insert picture of crab -->
 
     <div id="indexcarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
@@ -67,7 +64,7 @@
           <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/hidenseekcrab.jpg" class="img-fluid d-block w-100" alt="hide and seek crab">
         </div>
         <div class="carousel-item">
-          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/latitude.jpg" class="img-fluid d-block w-100" alt="crab flies">
+          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/crabbeer%202.jpg" class="img-fluid d-block w-100" alt="beers">
         </div>
       </div>
     </div>
@@ -75,14 +72,14 @@
     <br>
     Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Sea-world to provide life hacks to all you lovely lucky people. Positively influencing since '97, this this website is a platform where I can share my recommendations drawn from my very busy and important life.
     <br>
-    I woke up like this
     <img src=file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg>
-
+    I woke up like this
     <!-- Include a link to social media/ instagram pics -->
-
+<!-- This is the bit I am really stuck on- the code I have been given is below but I don't know how/where to paste it -->
     <div id="pixlee_container">
     </div>
-
+    <script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'OJdmiQCo9vY6u1yHlcl9'});Pixlee.addSimpleWidget({widgetId:'17151'});};</script>
+    <script src="https://instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
 
 
   </body>
