adding in red background to index

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="carousel-item">
           <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/angelcrab%20copy.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item1">
           <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/hidenseekcrab.jpg" class="img-fluid d-block w-100" alt="hide and seek crab">
         </div>
         <div class="carousel-item">
@@ -70,12 +70,23 @@
     </div>
 
     <br>
-    Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Sea-world to provide life hacks to all you lovely lucky people. Positively influencing since '97, this this website is a platform where I can share my recommendations drawn from my very busy and important life.
+    Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this this website is a platform where I can share my recommendations, all drawn from my very busy and important life.
     <br>
-    <img src=file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg>
-    I woke up like this
-    <!-- Include a link to social media/ instagram pics -->
-<!-- This is the bit I am really stuck on- the code I have been given is below but I don't know how/where to paste it -->
+
+    <div class="container">
+      <div id="demobox4"></div>
+    <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg" class="image-fluid">
+
+<div id="text">
+      I woke up like this</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1>Instagram</h1>
+<!-- This is the code for instagram feed would be cool if it was poss to edit it -->
     <div id="pixlee_container">
     </div>
     <script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'OJdmiQCo9vY6u1yHlcl9'});Pixlee.addSimpleWidget({widgetId:'17151'});};</script>
