little tweaks trying to put more images in and stop them resizing

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -31,7 +31,7 @@
           <h3>I DRAW TOO</h3>
       </div>
     </div>
-
+<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/crabdrawingcrab.jpg">
     <div>
       <div id="demobox3"></div>
       <p>As I an immensely caring, talented, (and modest) crab, I am most alturistic when it comes to taking the time to give back to my fellow critters, and thanks to my do-good-ing nature, I have pooled my creativity into a series of paintings which will be sold in aid of animals more endangered than myself.
