--- a/crabwears.html
+++ b/crabwears.html
@@ -28,11 +28,11 @@ I always have my bright red Aspinal bag with me - and I think you should get one
 
 <img src="file:///Users/Jasmine/Documents/Coding_Course/Screen%20Shot%202019-04-02%20at%2020.11.53.png" style="width:600px;height:600px;">
 <br>
-<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/mycalveinscrab.jpg">
+<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/mycalveinscrab.jpg" class="img-fluid d-block w-100">
 Just chilling in #mycalveins
 <br>
-<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/filacrab%202.jpg">
-Fila is your queue if you want to get Wavy.
+<img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/filacrab%202.jpg" style=image>
+Fila is your cue if you want to get waAvVyYY.
 <br>
   <div class="col-2"></div>
 </body>
