--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -24,3 +24,17 @@
 As an intensely cultural crab, I thought I'd impart some of my wisdom to you through a few reviews.
 
 <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/pensivereviewcrab.jpg">
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      insert review
+    </div>
+    <div class="col-sm">
+      insert review
+    </div>
+    <div class="col-sm">
+      insert review
+    </div>
+  </div>
+</div>
