--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
         <div class="carousel-item">
           <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/angelcrab%20copy.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
         </div>
-        <div class="carousel-item1">
+        <div class="carousel-item">
           <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/hidenseekcrab.jpg" class="img-fluid d-block w-100" alt="hide and seek crab">
         </div>
         <div class="carousel-item">
-          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/crabbeer%202.jpg" class="img-fluid d-block w-100" alt="beers">
+          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/crabinlove%202.jpg" class="img-fluid d-block w-100" alt="lover">
         </div>
       </div>
     </div>
