photo/content additions
- added pictures and text html to put in the recommends page
- added a bit of text on the draws

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -47,11 +47,9 @@
     <br>
 
     <div class="contrast">
-      <!-- Include some other art which is all red (I have lots of pictures on - maybe the "wannabe degas series") -->
-      <div id="carouselArtwork" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" alt="First slide">
+      <div id="container"
+          <p>Orangutans</p>
+          <img class="d-block w-100" src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" alt="First slide">
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="https://scontent-lht6-1.cdninstagram.com/vp/b837fa94cb368298bb69e0bcd4ab00dc/5D3F10FC/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54447067_355154648436944_7000422641458013400_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com" alt="Second slide">
@@ -62,7 +60,7 @@
         </div>
       </div>
       <br>
-      <p>Orangutans</p>
+
 
     </div>
 
