--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -28,13 +28,42 @@ As an intensely cultural crab, I thought I'd impart some of my wisdom to you thr
 <div class="container">
   <div class="row">
     <div class="col-sm">
-      insert review
+      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/KiffReview.jpg"
     </div>
     <div class="col-sm">
-      insert review
+      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/Koonsreview.jpg"
     </div>
     <div class="col-sm">
-      insert review
+      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/Tanning.jpg"
+    </div>
+  </div>
+</div>
+
+
+<p> Ken Kiff: The Sequence, Sainsbury Centre, Norwich. 17th November – Sunday 21st April
+Shown in it’s closest proximity to completeness yet, the 60 piece series of paintings from Ken Kiff’s  Sequence at the Sainsbury Centre is well worth the trip (and was also for me a wonderful excuse to discover the delights of Norwich).
+Despite his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, fusing sensitive application of colour allows them to sing for themselves. The effect of joyful colour palette, combined with his strange, and often slightly unsavoury subject matter emphasises an arresting fusion of various juxtapositions –the beautiful and ugly, the fantastical and everyday banality. Kiff’s paintings brim with narratives, which manage to be both conflicting and harmonious. It is perhaps due to his ability to create such an imaginative space, so filled with the contrariness and arbitrariness of life that people find his work so appealing, and relatable. Whilst very revered in his day for bridging the gaps between Abstract Expressionism and Modernism, Kiff sadly seems to have slipped into obscurity in the public’s recent collective consciousness—all the more reason to see these works, many of which are in private collections, before they disappear again.</p>
+
+<p> Jeff Koons at The Ashmolean, Oxford. 7th Feb – 9th June.
+I went to this exhibition with reservation. The giant of the art money world, Jeff Koon’s works seemed to me to be nothing more than ginourmously oversized and garishly kitsch. However, as this exhibition reveals, as a conceptual artist Koons excels, and that actually the thinking behind what can at appear first glance as rather un-thought out, is interestingly extensive, and where he lacks a use of traditional skill, he certainly makes up for with attention to detail. It can’t be denied- there is some strange appeal to artwork which so directly appeals to our senses- an inflatable balloon the height of a bus and made of metal is delightful. Koons’ ability to create art which is in dialogue with art history, and which connects highly intelligent and philosophical ideas, and a very basic sensory enjoyment makes him perhaps one of the most democratic artists of our day. </p>
+
+<p> Dorothea Tanning Tate 27 February – June 2019
+Thank you Tate for re-shedding on this incredible artist, in her first large-scale exhibition of her work in over 25 years. Whilst Dorothy Tanning has perhaps lived slightly in the shadows of her husband and one giants of the Surrealist movement, Max Ernst, this exhibition shows Surrealism as taken to an entirely new level.
+
+Whilst older paintings maintain an intricately wacky gothic scenarios and landscapes which invite the viewer into a world beyond the tangible, her later paintings ask no questions. As epic in subject matter as they are in size, Tanning confronts us with what it is to be a body in a series of writhing paintings, convulsing with abstracted forms which are at once undoubtedly human, and unsettlingly alien. This sense of discomfort is enhance, as despite the sensuous fleshiness of the brushstrokes, it is difficult to tell whether these tangled masses of figures are revellers or rivals. The same could be said for her soft sculptures, which reduced to a heap of suggestively limb-like curves radiate a disquieting sense of vulnerability and helplessness.
+
+With her uncanny ability to evoke such emotion and tangibility through such an abstracted pose or gesture, Tanning leaves us with some disconcerting questions about what actually constitute life and perhaps what it means to take it.</p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wildlifeartistoftheyear.jpg"
+    </div>
+    <div class="col-sm">
+      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/SunandHerflowers.jpg"
+    </div>
+    <div class="col-sm">
+      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/Greatwomenartistsexhibition.jpg"
     </div>
   </div>
 </div>
