--- a/crashion.html
+++ b/crashion.html
@@ -17,11 +17,11 @@
 </html>
 <img src="file:///Users/Jasmine/Documents/Coding_Course/Screen%20Shot%202019-04-02%20at%2020.06.03.png" style="width:600px;height:600px;">
 <br>
-By now you'll have seen I'm a true trendsetter. All of my crab friends look to <i>me</i> to see what's en vogue.
+By now you'll have seen I'm a true trendsetter. All of my friends look to <i>me</i> to see what's en vogue.
 <br>
 This season? It's rouge darling.
 <br>
-I always have my bright red Aspinal bag with me - and I think you should get one too. Or throw a scarf around your neck for some real chic.
+I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.
 <img src="file:///Users/Jasmine/Documents/Coding_Course/Screen%20Shot%202019-04-02%20at%2019.15.32.png" style="width:600px;height:600px;">
 
 <img src="file:///Users/Jasmine/Documents/Coding_Course/Screen%20Shot%202019-04-02%20at%2020.11.53.png" style="width:600px;height:600px;">
