--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CRAB</title>
+    <title>index/title>
 
     <!-- ADD BOOTSTRAP CORE HERE!!!! -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -35,7 +35,7 @@
       </div>
     </nav>
 
-    <h1>Who Is Crab?</h1>
+    <h1>I AM CRAB</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -70,22 +70,24 @@
     </div>
 
     <br>
-    Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this this website is a platform where I can share my recommendations, all drawn from my very busy and important life.
+    <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.</>
     <br>
 
     <div class="container">
       <div id="demobox4"></div>
     <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg" class="image-fluid">
 
-<div id="text">
-      I woke up like this</div>
+<p2>
+      I woke up like this
+      #nomakeupselfie
+      </p2>
 <br>
 <br>
 <br>
 <br>
 <br>
 <br>
-<h1>Instagram</h1>
+<h1>Doing the Gram for the Fans</h1>
 <!-- This is the code for instagram feed would be cool if it was poss to edit it -->
     <div id="pixlee_container">
     </div>
