--- a/crabwears.html
+++ b/crabwears.html
@@ -22,7 +22,7 @@ By now you'll have seen I'm a true trendsetter. All of my crab friends look to <
 <br>
 This season? It's rouge darling.
 <br>
-I always have my bright red Aspinal bag with me - and I think you should get one too. Or throw a scarf around your neck for some real chic.
+I wanted it in red... #lol jokes. Red Aspinal always... as seen on me.
 <br>
 <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/aspinalcrab.jpg">
 
