Attempting to adjust images

--- a/crabwears.html
+++ b/crabwears.html
@@ -15,7 +15,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
-<img src="file:///Users/Jasmine/Documents/Coding_Course/Screen%20Shot%202019-04-02%20at%2020.06.03.png" style="width:600px;height:600px;">
+<img src="file:///Users/Jasmine/Documents/Coding_Course/group_project/images/Screen%20Shot%202019-04-02%20at%2019.15.32.jpg" style="width:600px;height:600px;">
 <br>
 <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/fashionphotos.jpg">
 By now you'll have seen I'm a true trendsetter. All of my crab friends look to <i>me</i> to see what's en vogue.
