updated all image src
hopefully they should show up now :)

--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -18,18 +18,18 @@
 
     As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
 
-    <img src="/Users/harrietMac/Desktop/Coding_Course/group_project/images/pensivereviewcrab.jpg" style="width:300px">
+    <img src="images/pensivereviewcrab.jpg" style="width:300px">
 
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <img src="/Users/harrietMac/Desktop/Coding_Course/group_project/images/KiffReview.jpg" style="width:400px">
+        <img src="images/KiffReview.jpg" style="width:400px">
       </div>
       <div class="col-sm">
-        <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/Koonsreview.jpg" style="width:400px">
+        <img src="images/Koonsreview.jpg" style="width:400px">
       </div>
       <div class="col-sm">
-        <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/Tanning.jpg" style="width:400px">
+        <img src="images/Tanning.jpg" style="width:400px">
       </div>
     </div>
   </div>
@@ -83,13 +83,13 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wildlifeartistoftheyear.jpg" style="width:400px;">
+        <img src="images/wildlifeartistoftheyear.jpg" style="width:400px;">
       </div>
       <div class="col-sm">
-        <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/SunandHerflowers.jpg" style="width:400px;">
+        <img src="images/SunandHerflowers.jpg" style="width:400px;">
       </div>
       <div class="col-sm">
-        <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/Greatwomenartistsexhibition.jpg" style="width:400px">
+        <img src="images/Greatwomenartistsexhibition.jpg" style="width:400px">
       </div>
     </div>
   </div>
