--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
 
     <br>
-    <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.</>
+    <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
     <br>
 
     <div class="container">
@@ -88,11 +88,4 @@
 <br>
 <br>
 <h1>Doing the Gram for the Fans</h1>
-<!-- This is the code for instagram feed would be cool if it was poss to edit it -->
-    <div id="pixlee_container">
-    </div>
-    <script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'OJdmiQCo9vY6u1yHlcl9'});Pixlee.addSimpleWidget({widgetId:'17151'});};</script>
-    <script src="https://instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
-
-
   </body>
