--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -18,25 +18,26 @@
 
     As an intensely cultural crab, I feel it is my duty to impart some of my wisdom to you through a few reviews.
 
-    <img src="images/pensivereviewcrab.jpg" style="width:300px">
+    <img src="images/pensivereviewcrab.jpg">
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <img src="images/KiffReview.jpg" style="width:400px">
+  <div class="container-fluid p-0">
+      <div class="col-sm-2">
+        <img src="images/KiffReview.jpg">
       </div>
-      <div class="col-sm">
-        <img src="images/Koonsreview.jpg" style="width:400px">
+      <div class="col-sm-2">
+        <img src="images/Koonsreview.jpg" style="max-width:400px">
       </div>
-      <div class="col-sm">
-        <img src="images/Tanning.jpg" style="width:400px">
+      <div class="col-sm-2">
+        <img src="images/Tanning.jpg" style="max-width:600px">
       </div>
     </div>
   </div>
 
   <div class="grid-container">
     <div class="grid-item">Ken Kiff: The Sequence • Sainsbury Centre, Norwich • 17th November – Sunday 21st April
-    Shown in it’s closest proximity to completeness yet, the 60 piece series of paintings from Ken Kiff’s  Sequence at the Sainsbury Centre is well worth the trip (and was also for me a wonderful excuse to discover the delights of Norwich). Despite his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, fusing sensitive application of colour allows them to sing for themselves. The effect of joyful colour palette, combined with his strange, and often slightly unsavoury subject matter emphasises an arresting fusion of various juxtapositions the beautiful and ugly, the fantastical and everyday banality.</div>
+    Shown in it’s closest proximity to completeness yet, the 60 piece series of paintings from Ken Kiff’s  Sequence at the Sainsbury Centre is well worth the trip (and was also for me a wonderful excuse to discover the delights of Norwich). Despite his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, fusing sensitive application of colour allows them to sing for themselves. The effect of joyful colour palette, combined with his strange, and often slightly unsavoury subject matter emphasises an arresting fusion of various juxtapositions the beautiful and ugly, the fantastical and everyday banality.
+      <img src="images/KiffReview.jpg" style="width:400px">
+   </div>
 
     <div class="grid-item">Jeff Koons at The Ashmolean • Oxford • 7th Feb – 9th June
     I went to this exhibition with reservation. The giant of the art money world, Jeff Koon’s works seemed to me to be nothing more than ginourmously oversized and garishly kitsch. However, as this exhibition reveals, as a conceptual artist Koons excels, and that actually the thinking behind what can at appear first glance as rather un-thought out, is interestingly extensive, and where he lacks a use of traditional skill, he certainly makes up for with attention to detail. It can’t be denied- there is some strange appeal to artwork which so directly appeals to our senses- an inflatable balloon the height of a bus and made of metal is delightful. Koons’ ability to create art which is in dialogue with art history, and which connects highly intelligent and philosophical ideas, and a very basic sensory enjoyment makes him perhaps one of the most democratic artists of our day.</div>
@@ -117,3 +118,98 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
+
+<div class="row no-gutters popup-gallery">
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/bsh.jpg">
+              <img class="img-fluid" src="images/KiffReview.jpg" style="width:800px">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Ken Kiff: The Sequence • Sainsbury Centre, Norwich • 17th November – Sunday 21st April
+                    <br> Shown in it’s closest proximity to completeness yet, the 60 piece series of paintings from Ken Kiff’s  Sequence at the Sainsbury Centre is well worth the trip (and was also for me a wonderful excuse to discover the delights of Norwich).
+                    Despite his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, fusing sensitive application of colour allows them to sing for themselves. The effect of joyful colour palette, combined with his strange, and often slightly unsavoury subject matter emphasises an arresting fusion of various juxtapositions –the beautiful and ugly, the fantastical and everyday banality. Kiff’s paintings brim with narratives, which manage to be both conflicting and harmonious. It is perhaps due to his ability to create such an imaginative space, so filled with the contrariness and arbitrariness of life that people find his work so appealing, and relatable. Whilst very revered in his day for bridging the gaps between Abstract Expressionism and Modernism, Kiff sadly seems to have slipped into obscurity in the public’s recent collective consciousness—all the more reason to see these works, many of which are in private collections, before they disappear again.
+                  </div>
+                  <div class="project-name">
+                    Origin: Great Britain
+                  </div>
+                </div>
+              </div>
+            </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/persian.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/persian.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Persian
+                  </div>
+                  <div class="project-name">
+                    Origin: Iran
+                  </div>
+                </div>
+              </div>
+            </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/mc.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/mc.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Maine Coon
+                  </div>
+                  <div class="project-name">
+                    Origin: United States of America
+                  </div>
+                </div>
+              </div>
+            </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/sf.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/sf.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Scottish Fold
+                  </div>
+                  <div class="project-name">
+                    Origin: Scotland
+                  </div>
+                </div>
+              </div>
+            </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/rag.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/rag.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Ragdoll
+                  </div>
+                  <div class="project-name">
+                    Origin: United States of America, California
+                  </div>
+                </div>
+              </div>
+            </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="img/portfolio/fullsize/nfc.jpg">
+              <img class="img-fluid" src="img/portfolio/thumbnails/nfc.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                  <div class="project-category text-faded">
+                    Norweigian Forest Cat
+                  </div>
+                  <div class="project-name">
+                    Origin: Norway
+                  </div>
+                </div>
+              </div>
+            </a>
+        </div>
+      </div>
