--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>index/title>
+    <title>index</title>
 
     <!-- ADD BOOTSTRAP CORE HERE!!!! -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -58,7 +58,7 @@
             <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/naturalhabitat%202.jpg" class="img-fluid d-block w-100" alt="crab in natural habitat">
         </div>
         <div class="carousel-item">
-          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/angelcrab%20copy.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
+          <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/angelcrab.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
         </div>
         <div class="carousel-item">
           <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/hidenseekcrab.jpg" class="img-fluid d-block w-100" alt="hide and seek crab">
@@ -68,8 +68,7 @@
         </div>
       </div>
     </div>
-
-    <br>
+    <h2> Who Am I?</h2>
     <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
     <br>
 
@@ -79,7 +78,6 @@
 
 <p2>
       I woke up like this
-      #nomakeupselfie
       </p2>
 <br>
 <br>
@@ -88,4 +86,12 @@
 <br>
 <br>
 <h1>Doing the Gram for the Fans</h1>
+
+<div id="pixlee_container">
+</div>
+<script type="text/javascript">window.PixleeAsyncInit = function() {Pixlee.init({apiKey:'OJdmiQCo9vY6u1yHlcl9'});Pixlee.addSimpleWidget({widgetId:'17151'});};</script>
+<script src="https://instafeed.assets.pixlee.com/assets/pixlee_widget_1_0_0.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
