css background edits

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -49,8 +49,8 @@
           <img src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
           <img src="https://scontent-lht6-1.cdninstagram.com/vp/b837fa94cb368298bb69e0bcd4ab00dc/5D3F10FC/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54447067_355154648436944_7000422641458013400_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
           <img src="https://scontent-lht6-1.cdninstagram.com/vp/cb8e3efa0fc3b7acabb92bd705f80feb/5D40C6FF/t51.2885-15/e35/21147199_491766191182799_8403203402678403072_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
-        <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/FullSizeRender%202%20copy.jpg">
-      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/FullSizeRender%202%20copy%203.jpg">
+        <img src="images/FullSizeRender%202%20copy.jpg" style="max-height:600px">
+      <img src="images/FullSizeRender%202%20copy%203.jpg" style="max-height:600px">
      </div>
         </div>
       </div>
