--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -22,7 +22,7 @@
 
   <div class="container-fluid p-0">
       <div class="col-lg-2 col-sm-6">
-        <img src="images/KiffReview.jpg">
+        <img src="images/betterkiff.jpg" style="max-height:600px">
         Ken Kiff: The Sequence • Sainsbury Centre, Norwich • 17th November – Sunday 21st April
         Shown in it’s closest proximity to completeness yet, the 60 piece series of paintings from Ken Kiff’s  Sequence at the Sainsbury Centre is well worth the trip (and was also for me a wonderful excuse to discover the delights of Norwich). Despite his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, fusing sensitive application of colour allows them to sing for themselves. The effect of joyful colour palette, combined with his strange, and often slightly unsavoury subject matter emphasises an arresting fusion of various juxtapositions the beautiful and ugly, the fantastical and everyday banality.
 
@@ -39,7 +39,7 @@
   <div class="grid-container-fluid">
     <div class="grid-item">Ken Kiff: The Sequence • Sainsbury Centre, Norwich • 17th November – Sunday 21st April
     Shown in it’s closest proximity to completeness yet, the 60 piece series of paintings from Ken Kiff’s  Sequence at the Sainsbury Centre is well worth the trip (and was also for me a wonderful excuse to discover the delights of Norwich). Despite his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, fusing sensitive application of colour allows them to sing for themselves. The effect of joyful colour palette, combined with his strange, and often slightly unsavoury subject matter emphasises an arresting fusion of various juxtapositions the beautiful and ugly, the fantastical and everyday banality.
-      <img src="images/KiffReview.jpg" style="width:400px">
+      <img src="images/betterkiff.jpg" style="width:400px">
    </div>
 
     <div class="grid-item">Jeff Koons at The Ashmolean • Oxford • 7th Feb – 9th June
@@ -125,7 +125,7 @@
 <div class="row no-gutters popup-gallery">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/bsh.jpg">
-              <img class="img-fluid" src="images/KiffReview.jpg" style="width:800px">
+              <img class="img-fluid" src="images/betterkiff.jpg" style="width:800px">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
