--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a class="navbar-brand" href="#">
             <!-- need to insert crab icon image below -->
-            <img src="images/FullSizeRender 2 copy.jpg" width="30" height="30" alt="crab icon">
+            <img src="images/rockcrab.jpg" width="30" height="30" alt="crab icon">
           </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -106,7 +106,7 @@
       </div>
     </div>
     <h2> Who Am I?</h2>
-    
+
     <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
 
     <br>
