trying to make a flip box, making index 'i am crab'

--- a/crabdraws.html
+++ b/crabdraws.html
@@ -44,6 +44,34 @@
     </div>
     <br>
 
+    <div class="form-popup" id="myForm">
+      <form action="/action_page.php" class="form-container">
+        <h1>Say Hi!</h1>
+          <label for="email"><b>Email</b></label>
+          <input type="text" placeholder="Enter Email" name="email" required>
+
+          <label for="psw"><b>Password</b></label>
+          <input type="password" placeholder="Enter Password" name="psw" required>
+
+          <button type="submit" class="btn">Login</button>
+          <button type="submit" class="btn cancel" onclick="closeForm()">Close</button>
+        </form>
+      </div>
+
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div>
+
     <div class="contrast">
           <p>Orangutans</p>
           <img src="https://scontent-lht6-1.cdninstagram.com/vp/cde77745058d480ad15e52e4f698cd03/5D2EE5CF/t51.2885-15/sh0.08/e35/c0.135.1080.1080/s640x640/54513277_256765585202611_5678299889952223777_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com">
