--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
        <ul class="navbar-nav mr-auto">
          <li class="nav-item active">
-           <a class="nav-link" href="#">About Crab<span class="sr-only">(current)</span></a>
+           <a class="nav-link" href="#">Crab...<span class="sr-only">(current)</span></a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Crab Draws</a>
+           <a class="nav-link" href="#">Draws</a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Crab Wears</a>
+           <a class="nav-link" href="#">Wears</a>
          </li>
          <li class="nav-item">
-           <a class="nav-link" href="#">Crab Recommends</a>
+           <a class="nav-link" href="#">Recommends</a>
          </li>
        </ul>
        <form class="form-inline my-2 my-lg-0">
@@ -50,17 +50,9 @@
        </form>
      </div>
    </nav>
-
-
       </div>
     </div>
-
-
     <!-- Navbar still need to add color and spacing utiltiy clasess to css-->
-
-
-
-    <h1>I AM CRAB</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -79,12 +71,15 @@
 
 
 
+
+
+<div class="text-overlay">
     <div id="indexcarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="images/naturalhabitat%202.jpg" class="img-fluid d-block w-100" alt="crab in natural habitat">
         </div>
-        <div class="carousel-item">
+      <div class="carousel-item">
           <img src="images/angelcrab.jpg" class="img-fluid d-block w-100" alt="angel cap crab">
         </div>
         <div class="carousel-item">
@@ -93,21 +88,31 @@
         <div class="carousel-item">
           <img src="images/crabinlove%202.jpg" class="img-fluid d-block w-100" alt="lover">
         </div>
+          <div class="centered">I am Crab</div>I
       </div>
     </div>
-    <h2> Who Am I?</h2>
+    <br>
+  <div class="contrast">
+      <h2> Who Am I?</h2>
+      <div class="container">
+        <div id="demobox4"></div>
+      <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg" class="image-fluid">
 
     <p>Some may call me a guru, some may call me a gal. But really I'm just a crab, a London-based crustacean brought to you from the shores of Scarborough Seaworld to provide life hacks to all you lovely lucky people. Positively influencing since '97, this website is a platform where I can share my recommendations, all drawn from my very busy and important life.<p/>
-
     <br>
 
-    <div class="container">
-      <div id="demobox4"></div>
-    <img src="file:///Users/harrietMac/Desktop/Coding_Course/group_project/images/wokeuplikethiscrab.jpg" class="image-fluid">
 
 <p2>
       I woke up like this
       </p2>
+      <style>
+.vl {
+  border-left: 6px solid white;
+  height: 500px;
+}
+</style>
+
+<div class="vl"></div>
 <br>
 <br>
 <br>
@@ -123,4 +128,5 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+</div>
+</body>
