--- a/crabrecommends.html
+++ b/crabrecommends.html
@@ -22,9 +22,18 @@
 
   <div class="container-fluid p-0">
       <div class="col-lg-2 col-sm-6">
-        <img src="images/betterkiff.jpg" style="max-height:600px">
-        Ken Kiff: The Sequence • Sainsbury Centre, Norwich • 17th November – Sunday 21st April
-        Shown in it’s closest proximity to completeness yet, the 60 piece series of paintings from Ken Kiff’s  Sequence at the Sainsbury Centre is well worth the trip (and was also for me a wonderful excuse to discover the delights of Norwich). Despite his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, fusing sensitive application of colour allows them to sing for themselves. The effect of joyful colour palette, combined with his strange, and often slightly unsavoury subject matter emphasises an arresting fusion of various juxtapositions the beautiful and ugly, the fantastical and everyday banality.
+        <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+      <h2><img src="images/betterkiff.jpg" style="max-height:600px"></h2>
+    </div>
+    <div class="flip-box-back">
+      <h2>Ken Kiff: The Sequence • Sainsbury Centre, Norwich • 17th November – Sunday 21st April
+      Shown in it’s closest proximity to completeness yet, the 60 piece series of paintings from Ken Kiff’s  Sequence at the Sainsbury Centre is well worth the trip (and was also for me a wonderful excuse to discover the delights of Norwich). Despite his paintings are often unrealistic and illogical, to the point that on first glance they appear almost childish, fusing sensitive application of colour allows them to sing for themselves. The effect of joyful colour palette, combined with his strange, and often slightly unsavoury subject matter emphasises an arresting fusion of various juxtapositions the beautiful and ugly, the fantastical and everyday banality.</h2>
+    </div>
+  </div>
+</div>
+
 
       </div>
       <div class="col-lg-2 col-sm-6">
